fix: update theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,28 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #000;
+  position: relative;
+  -webkit-font-smoothing: antialiased;
+}
+
+body:after {
+  content: "";
+  opacity: 0.5;
+  background-size: 48px 56px;
+  background-position: 50% 0;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  position: absolute;
+  inset: 0;
+  z-index: -10;
+  background-image: radial-gradient(circle, #a3525f 1.5px, transparent 0);
+}
+
+.home:before {
+  content: "";
+  width: 100vw;
+  height: 60vw;
+  bottom: -50vw;
+  left: auto;
+  right: auto;
+  position: absolute;
+  z-index: -1;
+  background: radial-gradient(rgba(249,115,22,1) 10%, transparent 70%);
+
 }
 
 .loader {
@@ -61,4 +70,33 @@ body {
   100% {
     transform: rotateY(3600deg);
   }
+}
+
+.spinner-loader {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite
+}
+.spinner-loader::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 2px solid #FFF;
+  animation: prixClipFix 2s linear infinite ;
+}
+
+@keyframes rotate {
+  100%   {transform: rotate(360deg)}
+}
+
+@keyframes prixClipFix {
+    0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+    25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+    50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+    75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+    100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
 }
