--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,16 @@ body:after {
   z-index: -1;
   background: radial-gradient(rgba(249,115,22,.6) 10%, transparent 60%);
 }
+.records:before {
+  content: "";
+  width: 500px;
+  height: 500px;
+  top: 10px;
+  left: 10px;
+  position: absolute;
+  z-index: -1;
+  background: radial-gradient(rgba(249,115,22,.6) 0%, transparent 60%);
+}
 
 .loader {
   transform: translateZ(1px);
